--- a/Hyprland/.config/hypr/hyprland.conf
+++ b/Hyprland/.config/hypr/hyprland.conf
@@ -221,7 +221,7 @@ gestures {
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
     name = epic-mouse-v1
-    sensitivity = -0.5
+    sensitivity = -0.5 # -1.0 - 1.0, 0 means no modification.
 }
 
 
