--- a/Starship/.config/starship.toml
+++ b/Starship/.config/starship.toml
@@ -1,19 +1,23 @@
 format = """
-[░▒▓](#a3aed2)\
-[ 󰣇 ](bg:#a3aed2 fg:#090c0c)\
-[](bg:#769ff0 fg:#a3aed2)\
+[▓▒░](#3c3836)\
+[ 󰣇 ](bg:#282828 fg:#d65d0e)\
+[](bg:#d65d0e fg:#282828)\
 $directory\
-[](fg:#769ff0 bg:#394260)\
+[](fg:#d65d0e bg:#1d2021)\
 $git_branch\
 $git_status\
-[](fg:#394260 bg:#212736)\
-[](fg:#212736 bg:#1d2230)\
+[](fg:#1d2021 bg:#1d2021)\
+$nodejs\
+$rust\
+$golang\
+$php\
+[](fg:#1d2021 bg:#1d2230)\
 $time\
-[ ](fg:#1d2230)\
+[ ](fg:#282828)\
 \n$character"""
 
 [directory]
-style = "fg:#e3e5e5 bg:#769ff0"
+style = "fg:#e3e5e5 bg:#d65d0e"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
@@ -26,30 +30,32 @@ truncation_symbol = "…/"
 
 [git_branch]
 symbol = ""
-style = "bg:#394260"
-format = '[[ $symbol $branch ](fg:#769ff0 bg:#394260)]($style)'
+style = "bg:#1d2021"
+format = '[[ $symbol $branch ](fg:#d65d0e bg:#1d2021)]($style)'
 
 [git_status]
-style = "bg:#394260"
-format = '[[($all_status$ahead_behind )](fg:#769ff0 bg:#394260)]($style)'
+style = "bg:#1d2021"
+format = '[[($all_status$ahead_behind )](fg:#d65d0e bg:#1d2021)]($style)'
 
-[python]
-symbol = ""
-
-
-[shell]
-bash_indicator = ""
-version_format = 'v${raw}'
-pyenv_prefix = 'pyenv'
-detect_files = ['.python-version', 'Pipfile', '__init__.py', 'pyproject.toml', 'requirements.txt', 'setup.py', 'tox.ini']
-detect_extensions = ['py', 'ipynb']
-style = "bg:#212736"
-format = 'via [${symbol}${pyenv_prefix}(${version} )(\($virtualenv\) )]($style)'
+[nodejs]
+symbol = ""
+style = "bg:#1d2021"
+format = '[[ $symbol ($version) ](fg:#d65d0e bg:#1d2021)]($style)'
 
 [rust]
 symbol = ""
-style = "bg:#212736"
-format = '[[ $symbol ($version) ](fg:#769ff0 bg:#212736)]($style)'
+style = "bg:#1d2021"
+format = '[[ $symbol ($version) ](fg:#d65d0e bg:#1d2021)]($style)'
+
+[golang]
+symbol = ""
+style = "bg:#1d2021"
+format = '[[ $symbol ($version) ](fg:#d65d0e bg:#1d2021)]($style)'
+
+[php]
+symbol = ""
+style = "bg:#1d2021"
+format = '[[ $symbol ($version) ](fg:#d65d0e bg:#1d2021)]($style)'
 
 [time]
 disabled = false
