Several Updates to env and added multiple configuration chanages

--- a/Tmux/.config/tmux/tmux.conf
+++ b/Tmux/.config/tmux/tmux.conf
@@ -9,3 +9,9 @@ setw -g pane-base-index 1
 
 # Sorts windows when one is closed
 set-option -g renumber-windows on
+
+# Enabled Mouse Mode
+set -g mouse on
+
+# Sets TERM to 256 colors
+set -g default-terminal "tmux-256color"
