--- a/Hyprland/.config/hypr/hyprlock.conf
+++ b/Hyprland/.config/hypr/hyprlock.conf
@@ -1,3 +1,5 @@
+source = $HOME/.dotfiles/Themes/GruvBoxDark.conf
+
 authentication {
 	pamn:enabled = true
 	fingerprint:enabled = true
@@ -8,33 +10,55 @@ authentication {
 
 background {
 	monitor = 
-	path = $HOME/Media/Pictures/luffy.jpg 
+	path = $HOME/Media/Pictures/Wallpapers/smile.png
 	color = rgba(25, 20, 20 , 1.0)
 	blur_passes = 0
 }
 
 input-field {
 	monitor =
-	size = 20%, 5%
-	outline_thickness = 3
-	inner_color = rgba(0, 0, 0, 0.0) # no fill
-	outer_color = rgba(33ccffee) rgba(00ff99ee) 90deg
-	check_color= rgba(00ff00ee) rgba(ff6633ee) 120deg
-	fail_color= rgba(ff6633ee) rgba(ff0066ee) 40deg
-	font_color = rgb(143, 143, 143)
+	size = 12%, 3%
+	outline_thickness = 2
+	rounding = 20
 	fade_on_empty = true
-	rounding = 15
-	position = 0, -20
+	dots = true
+  dots_spacing = 0.3
+
+  position = 0, 250
 	halign = center
-	valign = center
+	valign = bottom
+
+	inner_color = rgba(00000000) # no fill
+  outer_color = $orange1
+	check_color= rgba(00ff00ee) rgba(ff6633ee) 120deg
+  fail_color= rgba(ff6633ee) rgba(ff0066ee) 40deg
+	
+	font_color = rgb(143, 143, 143)
+  fail_text = $PAMFAIL
 }
 
+# TIME
 label {
-	monitor =
-	text = cmd[update:1000] echo "$TIME"
-	font_size = 55
-	halign = right
-	valign = bottom
-	shadow_passes = 5
-	shadow_size = 10
+    monitor =
+    text = $TIME # ref. https://wiki.hyprland.org/Hypr-Ecosystem/hyprlock/#variable-substitution
+    font_size = 90
+    font_family = $font
+
+    position = -30, 0
+    halign = right
+    valign = top
+}
+
+# DATE
+label {
+    monitor =
+    text = cmd[update:60000] date +"%A, %d %B %Y" # update every 60 seconds
+    font_size = 25
+    font_family = $font
+
+    position = -30, -150
+    halign = right
+    valign = top
+    shadow_passes = 5
+    shadow_size = 10
 }
