--- a/Hyprland/.config/hypr/hyprland.conf
+++ b/Hyprland/.config/hypr/hyprland.conf
@@ -4,10 +4,11 @@ monitor = DP-1, 2560x1440@164.99, 0x0, 1
 # Keywords
 $terminal = ghostty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 # Auto-start applications
-exec-once = hyprpaper, waybar
+exec-once = hyprpaper
+exec-once = waybar
 
 # Environment variables
 env = XCURSOR_SIZE,24
