More configuration changes.  Going forward should be minimum changes and implementing scripts to make sure needed packages and scrips are installed for new systems.

--- a/WayBar/.config/waybar/config
+++ b/WayBar/.config/waybar/config
@@ -77,7 +77,8 @@
     },
 
     "clock#time": {
-        "timezone": "America/New_York",
+        "format": "{:%I:%M %p}",
+        //"timezone": "America/New_York",
         "tooltip-format": "<big>{:%Z %z}</big>\n<small>Eastern Standard Time</small>",
     },
 
