--- a/Hyprland/.config/hypr/hyprland.conf
+++ b/Hyprland/.config/hypr/hyprland.conf
@@ -3,7 +3,7 @@ monitor = DP-1, 2560x1440@164.99, 0x0, 1
 
 # Keywords
 $terminal = ghostty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = rofi -show drun
 
 # Auto-start applications
