Added theme images and made some small adjustments to some final configs. Prior to the use of Claude code for testing

--- a/app-configs/tmux/tmux.conf
+++ b/app-configs/tmux/tmux.conf
@@ -3,6 +3,9 @@ set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
+# Sets TERM to 256 colors
+set -g default-terminal "xterm-256color"
+
 # Sets first window to be 0
 set -g base-index 1
 setw -g pane-base-index 1
@@ -12,6 +15,3 @@ set-option -g renumber-windows on
 
 # Enabled Mouse Mode
 set -g mouse on
-
-# Sets TERM to 256 colors
-set -g default-terminal "tmux-256color"
