--- a/app-configs/ghostty/config
+++ b/app-configs/ghostty/config
@@ -1,13 +1,13 @@
 # Theme
-theme = GruvboxDark
+# theme = gruvbox-dark.conf
 
 # Background
-background-opacity = 0.6
+background-opacity = 0.7
 background-blur = true
 
 # Fonts
 font-family = "JetBrainsMono Nerd Font Mono"
-font-size = 18
+font-size = 12
 
 # Cursor
 cursor-style = block_hollow
@@ -15,5 +15,5 @@ cursor-style-blink = true
 mouse-hide-while-typing = true
 
 # Window
-window-padding-x = 4
-window-padding-y = 4
+window-padding-x = 2
+window-padding-y = 0
