Tmux conf change to allow external ssh control with arror keys.  Allow cluade to review code

--- a/app-configs/tmux/tmux.conf
+++ b/app-configs/tmux/tmux.conf
@@ -3,8 +3,9 @@ set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
-# Sets TERM to 256 colors
-set -g default-terminal "xterm-256color"
+# Sets TERM to 256 colors with proper tmux support
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # Sets first window to be 0
 set -g base-index 1
